src/main/java/com/example/myweatherapi/error/IllegalOperationException.java
package com.example.myweatherapi.error;

public class IllegalOperationException extends RuntimeException{
    public IllegalOperationException(String message) {
        super(message);
    }
}
